# cursed-notes

./: CMakeLists.txt  LICENSE  README  README.md
src/: CMakeLists.txt  bnio.cpp  bnio.hpp  booknote.cpp  booknote.hpp  cursednotes.cpp  ncurses_app.cpp  ncurses_app.hpp  note.hpp  notebook.cpp  notebook.hpp  pbio.cpp  pbio.hpp  projbook.cpp  projbook.hpp
src/ncurses/: filler.cpp  filler.hpp  footer.cpp  footer.hpp  header.cpp  header.hpp  itemlist.cpp  itemlist.hpp  ncurses.cpp  ncurses.hpp  notelist.cpp  notelist.hpp  projlist.cpp  projlist.hpp  windowelement.cpp  windowelement.hpp
tests/: CMakeLists.txt
tests/src/: CMakeLists.txt  booknote_test.cpp  note_test.cpp  notebook_test.cpp  projbook_test.cpp
